# ebook-to-audiobook

./: .gitignore  .replit  AGENT_COORDINATION_UPDATE.md  AGENT_PROGRESS.json  DESKTOP_AGENT_TASKS.md  DESKTOP_TRAINING_COMPLETE.md  LKY-speech-.tsv  LKY_VOICE_TRAINING_SUCCESS.md  LKY_VOICE_TRAINING_UPDATE.md  LOCAL_BACKUP_INFO.md  MAC_AGENT_READY_UPDATE.md  NEXT_STEPS_PLAN.md  PROJECT_STATE.md  README.md  STATUS_FOR_MAC_AGENT.md  VOICE_INFERENCE_SETUP.md  VOICE_TRAINING_RESULTS.md  convert.py  convert_full_book.py  create_lky_audiobook.py  ebook2audio_simple.py  example_optimized_usage.py  extract_lky_segments.py  extracted_text.txt  lky_real_audio_player.html  lky_voice_player.html  pdf_to_audio.py  play_lky_samples.py  pyproject.toml  register_lky_voice.py  register_lky_voice_simple.py  requirements.txt  setup_gpt_sovits.py  setup_voice_inference_mac.py  split_audio_by_timestamps.py  test_book.txt  test_lky_ebook_integration.py  test_model_import.py  test_voice_integration_standalone.py  train_lky_enhanced.py  (+3 more)
docs/: LKY_VOICE_PROJECT_STATUS.md  LKY_VOICE_TRAINING_ENHANCEMENT_PLAN.md  ROADMAP.md  atomic-bug-resolution-checklist.md  bug-documentation.md  bug-resolution-summary.md  file-structure-reference.md
lky_audiobook_inference/: inference.py
lky_audiobook_inference/pretrained_models/chinese-hubert-base/: chinese-hubert-base-fairseq-ckpt.pt
lky_audiobook_inference/src/AR/models/: t2s_model.py
lky_audiobook_inference/src/AR/modules/: __init__.py  lr_schedulers.py  optim.py
lky_audiobook_inference/src/TTS_infer_pack/: TTS.py
lky_audiobook_inference/src/module/: models.py
lky_audiobook_inference/src/tools/: audio_sr.py
lky_audiobook_inference/src/tools/i18n/locale/: en_US.json
models/custom_voices/: desktop_agent_production_v1.json  desktop_agent_production_v1.pth  desktop_agent_test_voice.json  desktop_agent_test_voice.pth  desktop_trained_v1.pth  lky_voice_model_v1.json
src/ebook2audio/: __init__.py  cli.py  config.py  pipeline.py  utils.py
src/ebook2audio/extract/: __init__.py  epub.py  mobi.py  ocr_cache.py  ocr_parallel.py  pdf.py  progress.py  txt.py
src/ebook2audio/voices/: __init__.py  base.py  builtin.py  catalog.py  custom.py  custom_trained_provider.py  gpt_sovits_provider.py  gtts_provider.py  manager.py  pyttsx3_provider.py
tests/: __init__.py  conftest.py  test_cli.py  test_extract.py  test_pipeline.py  test_voices.py
tests/data/: sample.txt
