[tool.poetry]
name = "repl_nix_ebook-to-audiobook"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^3.0.1"
pytesseract = "^0.3.10"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
